--- a/requirements.txt
+++ b/requirements.txt
@@ -4,4 +4,6 @@ openai==0.27.8
 textblob==0.17.1
 vaderSentiment==3.3.2
 Werkzeug==2.3.6
+PyPDF2
 gunicorn # Optional: For deploying Flask apps in production
+
